fix grid alignment on all screen sizes

--- a/src/Components/CardList/CardList.css
+++ b/src/Components/CardList/CardList.css
@@ -2,12 +2,14 @@
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
-  align-items: flex-end;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  align-items: flex-end; /* short images should align to the bottom of the row */
+  overflow-x: hidden; /* ensure we can't scroll horizontally (shouldn't happen but just in case) */
+  max-width: 54rem; /* sensible max width so the images aren't too big on large screens */
+  margin-left: auto;  /* centre the card list horizontally... */
+  margin-right: auto; /* ...on large screens */
 }
 
 .card-list--item {
-  flex: 1;
-  width: 25%;
+  flex: 1 1 25%; /* default to 4 images per row */
+  min-width: 12rem; /* ensure the images can't shrink too small to be properly visible */
 }
